--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -6,7 +6,7 @@
     <div class="col-5">
         <mat-form-field>
             <mat-label>Pesquisar</mat-label>
-            <input matInput (keyup)="applyFilter($event)" #input>
+            <input matInput (keydown.enter)="search()" (keyup)="applyFilter($event)" #input>
             <mat-icon matSuffix>search</mat-icon>
         </mat-form-field>
     </div>
