--- a/src/app/show-product/show-product.component.html
+++ b/src/app/show-product/show-product.component.html
@@ -11,8 +11,9 @@
                 <div class="row mx-auto my-4">
                     <h1 class="text-center">Avaliação</h1>
                     <div class="row d-flex justify-content-center">
-                        <mat-icon *ngFor="let i of rateInt">star</mat-icon>
-                        <mat-icon *ngIf="rateDouble > 0">star_half</mat-icon> 
+                        <mat-icon *ngFor="let i of [].constructor(filledStar)">star</mat-icon>
+                        <mat-icon *ngFor="let i of [].constructor(halfStar == true ? 1 : 0)">star_half</mat-icon> 
+                        <mat-icon class="material-icons-outlined" *ngFor="let i of [].constructor(emptyStar)">grade</mat-icon>
                         <!-- <mat-icon class="material-symbols-outlined" *ngIf="rateDouble < 1">star</mat-icon> -->
                         <!-- <mat-icon *ngFor="let i of rateEmpty">star_half</mat-icon> -->
                     </div>
@@ -38,14 +39,14 @@
                     <div class="col-5 h-100"> 
                         <div class="row my-auto">
                             <h2 class="price">{{product?.key_price}}</h2>
-                            <button (click)="addCartKey()" mat-raised-button color="primary">Comprar key
+                            <button (click)="addCartKey()" mat-raised-button color="primary">Adicionar Chave
                                 <mat-icon style="transform: rotate(45deg);">key</mat-icon>
                             </button>                            
                         </div>
 
                         <div class="row my-5">
                             <h2 class="price">{{product?.price}}</h2>
-                            <button *ngIf="product.price != null" (click)="addCartCD()" mat-raised-button color="primary">Comprar CD
+                            <button *ngIf="product.price != null" (click)="addCartCD()" mat-raised-button color="primary">Adicionar CD
                                 <mat-icon>album</mat-icon>
                             </button>
                         </div>
