--- a/src/styles.scss
+++ b/src/styles.scss
@@ -1,5 +1,5 @@
 @use '@angular/material' as mat;
-
+@import url("https://fonts.googleapis.com/icon?family=Material+Icons|Material+Icons+Outlined");
 @import "@angular/material/theming";
 
 @include mat.core();
