--- a/src/app/show-product/show-product.component.html
+++ b/src/app/show-product/show-product.component.html
@@ -8,15 +8,11 @@
                     <img class="mx-auto" src="{{product?.image}}" >
                 </div>
                 
-                <div class="row mx-auto my-4">
-                    <h1 class="text-center">Avaliação</h1>
-                    <div class="row d-flex justify-content-center">
-                        <mat-icon *ngFor="let i of [].constructor(filledStar)">star</mat-icon>
-                        <mat-icon *ngFor="let i of [].constructor(halfStar == true ? 1 : 0)">star_half</mat-icon> 
-                        <mat-icon class="material-icons-outlined" *ngFor="let i of [].constructor(emptyStar)">grade</mat-icon>
-                        <!-- <mat-icon class="material-symbols-outlined" *ngIf="rateDouble < 1">star</mat-icon> -->
-                        <!-- <mat-icon *ngFor="let i of rateEmpty">star_half</mat-icon> -->
-                    </div>
+                <div class="row d-flex justify-content-center my-4" style="font-size: 1.3rem ;">
+                    <mat-icon *ngFor="let i of [].constructor(filledStar)">star</mat-icon>
+                    <mat-icon *ngFor="let i of [].constructor(halfStar == true ? 1 : 0)">star_half</mat-icon> 
+                    <mat-icon class="material-icons-outlined" *ngFor="let i of [].constructor(emptyStar)">grade</mat-icon>
+                    <span class="my-auto">{{product.rating}} / 5.0</span>
                 </div>           
             </div>
             
