--- a/src/app/show-product/show-product.component.scss
+++ b/src/app/show-product/show-product.component.scss
@@ -1,6 +1,6 @@
 img {
     padding: 0px;
-    border: 5px;
+    border: 3px;
     border-color: black;
     border-radius: 40px;
     border-style: solid;
@@ -16,6 +16,12 @@ img {
 
 ::ng-deep .mat-form-field-appearance-fill .mat-form-field-flex {
     background-color: #fff; 
+}
+
+span {
+    text-align: center;
+    width: 20%;
+    font-weight: 450;
 }
 
 p {
